--- a/index.html
+++ b/index.html
@@ -3,7 +3,158 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Primi passi operativi per creare un modello di pagina HTML per un post. Scopri come iniziare in modo facile.
+      "
+    />
+    <title>Sviluppo di una pagina web - Blog Epicode</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div><img src="logo.svg" /></div>
+      <div>Epicode - Il blog dei developers</div>
+      <menu>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Articoli</a></li>
+        <li><a href="#">Lavora con noi</a></li>
+      </menu>
+      <hr />
+    </header>
+    <main>
+      <div>
+        <h1>Come creare un template per i post</h1>
+        <p>di Mario Rossi - Pubblicato il 25-10-2020</p>
+      </div>
+      <article>
+        <section>
+          prima cosa da fare è suddividere in blocchi logici la pagina,
+          identificando le <strong>parti comuni</strong> da applicare a tutte le
+          pagine.
+        </section>
+        <section>
+          <p>Le varie aree saranno quindi suddivise in:</p>
+          <ol>
+            <li>Contenuti di intestazione dei tag &lt;header&gt;</li>
+            <li>
+              Contenuti centrali variabili del tag &lt;main&gt; &lpar;corpo
+              principale&rpar;
+            </li>
+            <li>
+              Contenuti di fine pagina comuni, da inserire nel tag
+              &lt;footer&gt;
+            </li>
+          </ol>
+          <p>Formattazione del codice</p>
+          <p>
+            Il testo dell'articolo dovrà essere formattato per identificare
+            tutte le parti da <strong>selezionare con i CSS.</strong> Perciò i
+            passi saranno:
+          </p>
+          <ol>
+            <li>
+              Progettare il markup assegnando ad ogni specifico testo il tag
+              appropriato
+            </li>
+            <li>
+              Scrivere l'HTML tai tag esterni a quelli interni e dall'alto verso
+              il basso
+            </li>
+            <li>Applicare gli stili CSS</li>
+          </ol>
+          <p>
+            L'applicazione di stili CSS è cresciuta negli anni fino a
+            raggiungere la diffusione pressocché totale.
+          </p>
+          <table>
+            <thead>
+              Diffusione dei CSS
+            </thead>
+            <tr>
+              <th>Anno</th>
+              <th>% di utilizzo</th>
+              <th>Supporto browsers</th>
+            </tr>
+            <tr>
+              <td>2000</td>
+              <td>20%</td>
+              <td>17%</td>
+            </tr>
+            <tr>
+              <td>2002</td>
+              <td>35%</td>
+              <td>22%</td>
+            </tr>
+            <tr>
+              <td>2004</td>
+              <td>45%</td>
+              <td>42%</td>
+            </tr>
+            <tr>
+              <td>2008</td>
+              <td>80%</td>
+              <td>51%</td>
+            </tr>
+            <tr>
+              <td>2021</td>
+              <td>100%</td>
+              <td>76%</td>
+            </tr>
+          </table>
+          <p>
+            Un test di validazione potrà essere fatto tramite il
+            <a href="#">tool online</a> dedicato allo scopo. Una volta
+            ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere
+            stati dei veri developers come loro:
+          </p>
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/aBSZVeBRvDY?si=YtupwxEGz0_VT63o"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+        </section>
+        <h1>Novità</h1>
+        <section>
+          <p>
+            Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla
+            nostra newsletter:
+          </p>
+          <form>
+            <element>
+              <input type="text" id="email" placeholder="Inserisci l'email" />
+              <button>Iscriviti</button>
+            </element>
+          </form>
+        </section>
+        <h1>Articoli correlati</h1>
+        <section>
+          <a href="#">Validare il codice HTML</a>
+          <p>Categoria: develop</p>
+          <p>Data: 18-9-2020</p>
+          <a href="#">Correggere la sintassi</a>
+          <p>Categoria: develop</p>
+          <p>Data: 16-9-2020</p>
+          <a href="#">Meno Kb nella pagina</a>
+          <p>Categoria: ottimizzazione</p>
+          <p>Data: 30-9-2020</p>
+        </section>
+      </article>
+      <hr />
+    </main>
+    <footer>
+      <p>Blog Epicode &copy;2023</p>
+      <p>
+        <i
+          >Testata online di Mario Rossi, registrata con prot. n.123/2018 - via
+          Luigi Einaudi 2 - Milano. P.IVA 00112233.
+          <a href="mailto:info@epicode.school">info@epicode.school</a>
+        </i>
+      </p>
+    </footer>
+  </body>
 </html>
